--- a/index.html
+++ b/index.html
@@ -10,29 +10,77 @@
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,700&display=swap" rel="stylesheet">
-   <title>Document</title>
+   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+   <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,700&display=swap" rel="stylesheet">
+   <title>Sev Kassa</title>
 </head>
 
 <body>
 
-   <header>
-      <section class="header_contact ">
-         
-            <div class="header_contact_first header_display_none">Интернет-магазин
-               кодов активации ОФД</div>
-            <div class="header_contact_child2 header_display_none">Пн-Пт: 09:00 - 19:00
-               Сб-Вс: 10:00 - 17:00 </div>
-            <div class="header_contact_child3 header_display_none"><span>+7 (978) 136-36-06</span>
-               <button>Заказать обратный звонок</button>
+   <div class="container">
+      <header>
+
+         <div class="header_contact_block">
+            <div class="wrapper">
+               <section class="header_contact ">
+
+                  <div class="header_contact_first header_display_none">Интернет-магазин
+                     кодов активации ОФД</div>
+                  <div class="header_contact_child2 header_display_none">Пн-Пт: 09:00 - 19:00
+                     Сб-Вс: 10:00 - 17:00 </div>
+                  <div class="header_contact_child3 header_display_none"><span>+7 (978) 136-36-06</span>
+                     <button>Заказать обратный звонок</button>
+                  </div>
+
+               </section>
             </div>
-         
-      </section>
-   </header>
+         </div>
+         <div class="header_background">
+            <div class="wrapper">
+               <div class="burger">
+                  <div class="logo">Sev-Kassa</div>
+                  <div class="menu-btn">
+                     <span></span>
+                     <span></span>
+                     <span></span>
+                  </div>
+                  <div class="menu">
+                     <nav>
+                        <ul class="nav_items_burger">
+                           <li><a href="#">О магазине</a></li>
+                           <li><a href="#">Каталог товаров</a></li>
+                           <li><a href="#">Доставка и оплата</a></li>
+                           <li><a href="#">Наши услуги</a></li>
+                           <li><a href="#">Отзывы</a></li>
+                           <li><a href="#">Статьи</a></li>
+                           <li><a href="#">Контакты</a></li>
+                        </ul>
+                     </nav>
+                  </div>
+               </div>
+               <nav class="header_nav_desktop">
+                  <ul class="nav_items">
+                     <li class="logo">Sev-Kassa</li>
+                     <li><a href="#">О магазине</a></li>
+                     <li><a href="#">Каталог товаров</a></li>
+                     <li><a href="#">Доставка и оплата</a></li>
+                     <li><a href="#">Наши услуги</a></li>
+                     <li><a href="#">Отзывы</a></li>
+                     <li><a href="#">Статьи</a></li>
+                     <li><a href="#">Контакты</a></li>
+                  </ul>
+               </nav>
+            </div>
+         </div>
+      </header>
+
+   </div>
+
+
 
 
    <script src="js/main.min.js"></script>
+   <script src="js/main.js"></script>
 </body>
 
 </html>
