--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
                            <li><a href="#">Контакты</a></li>
                         </ul>
                      </nav>
+                     <section class="header_contact header_contact_burger ">
+                        
+                        <div class="header_contact_child3"><span>+7 (978) 136-36-06</span>
+                           <button>Заказать обратный звонок</button>
+                        </div>
+                        <div class="header_contact_child2">Пн-Пт: 09:00 - 19:00
+                           Сб-Вс: 10:00 - 17:00 </div>
+
+                     </section>
                   </div>
                </div>
                <nav class="header_nav_desktop">
@@ -70,6 +79,13 @@
                      <li><a href="#">Контакты</a></li>
                   </ul>
                </nav>
+               <div class="cheat_activ">
+                  <h1>коды активации офд</h1>
+                  <div class="cheat_activ_text">
+                     это уникальный набор символов, который позволяет оплачивать услуги оператора фискальных данных.
+                  </div>
+                  <a class="watch_link" href="###">Смотреть</a>
+               </div>
             </div>
          </div>
       </header>
