start attention block

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         </ul>
                      </nav>
                      <section class="header_contact header_contact_burger ">
-                        
+
                         <div class="header_contact_child3"><span>+7 (978) 136-36-06</span>
                            <button>Заказать обратный звонок</button>
                         </div>
@@ -89,7 +89,33 @@
             </div>
          </div>
       </header>
-
+      <div class="wrapper">
+         <div class="main">
+            <div class="welcome_shop">
+               <h2 class="subtitle_shop">Добро пожаловать в наш интернет-магазин</h2>
+               <div class="info_shop">
+                  <div class="welcom_shop_text">Заручившись поддержкой надежных партнеров «Sev-Kassa» осуществляйте
+                     легкий переход на кассовый аппараты в своей сфере предоставления услуг, товаров или выполнения
+                     работ. Наличие онлайн кассы позволяют прозрачно осуществлять предпринимательскую деятельность.
+                     Поскольку вся информация будет автоматически пересылаться в налоговые органы через ОФД.</div>
+                  <div class="welcom_shop_text"> Открытое ведение бизнеса также позволит избежать частых проверок
+                     налоговиков. Например, касса 54 фз позволяет снизить бумагооборот, а также корректировать работу
+                     компании. Фискальный регистратор самостоятельно будет выполняет отчеты, что позволит кассирам не
+                     вести несколько книг кассового учета. Значительно проще происходит и подсчет товарных остатков.
+                  </div>
+               </div>
+            </div>
+         </div>
+      </div>
+         <div class="company_attention">
+            <h2 class="subtitle_shop">Почему наша компания стоит вашего внимания?</h2>
+            <div class="company_attention_list">
+               <div class="attention_item"></div>
+               <div class="attention_item"></div>
+               <div class="attention_item"></div>
+               <div class="attention_item"></div>
+            </div>
+         </div>
    </div>
 
 
