block application end

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
    <meta charset="UTF-8">
@@ -110,10 +110,31 @@
          <div class="company_attention">
             <h2 class="subtitle_shop">Почему наша компания стоит вашего внимания?</h2>
             <div class="company_attention_list">
-               <div class="attention_item"></div>
-               <div class="attention_item"></div>
-               <div class="attention_item"></div>
-               <div class="attention_item"></div>
+               <div class="attention_item fast_delivery">
+                  <div class="attention_content">
+                     <h6 class="attention_subtitle_list">Быстрая доставка</h6>
+                     <div class="attention_text_list">Отправляем коды в течение 5 минут после оплаты</div>
+                  </div>
+               </div>
+               <div class="attention_item quality">
+                  <div class="attention_content">
+                     <h6 class="attention_subtitle_list">Качество</h6>
+                     <div class="attention_text_list">Гарантия от производителя</div>
+                  </div>
+               </div>
+               <div class="attention_item complex_approach">
+                  <div class="attention_content">
+                     <h6 class="attention_subtitle_list">Комплексный подход</h6>
+                     <div class="attention_text_list">К обслуживанию кассы на предприятии</div>
+                  </div>
+               </div>
+               <div class="attention_item low_price">
+                  <div class="attention_content">
+                     <h6 class="attention_subtitle_list">гарантия низких цен</h6>
+                     <div class="attention_text_list">На товары и услуги в нашем магазине</div>
+                  </div>
+               </div>
+               
             </div>
          </div>
    </div>
