question and card list end

--- a/index.html
+++ b/index.html
@@ -107,42 +107,226 @@
             </div>
          </div>
       </div>
-         <div class="company_attention">
-            <h2 class="subtitle_shop">Почему наша компания стоит вашего внимания?</h2>
-            <div class="company_attention_list">
-               <div class="attention_item fast_delivery">
-                  <div class="attention_content">
-                     <h6 class="attention_subtitle_list">Быстрая доставка</h6>
-                     <div class="attention_text_list">Отправляем коды в течение 5 минут после оплаты</div>
-                  </div>
+      <div class="company_attention">
+         <h2 class="subtitle_shop">Почему наша компания стоит вашего внимания?</h2>
+         <div class="company_attention_list">
+            <div class="attention_item fast_delivery">
+               <div class="attention_content">
+                  <h6 class="attention_subtitle_list">Быстрая доставка</h6>
+                  <div class="attention_text_list">Отправляем коды в течение 5 минут после оплаты</div>
                </div>
-               <div class="attention_item quality">
-                  <div class="attention_content">
-                     <h6 class="attention_subtitle_list">Качество</h6>
-                     <div class="attention_text_list">Гарантия от производителя</div>
-                  </div>
-               </div>
-               <div class="attention_item complex_approach">
-                  <div class="attention_content">
-                     <h6 class="attention_subtitle_list">Комплексный подход</h6>
-                     <div class="attention_text_list">К обслуживанию кассы на предприятии</div>
-                  </div>
-               </div>
-               <div class="attention_item low_price">
-                  <div class="attention_content">
-                     <h6 class="attention_subtitle_list">гарантия низких цен</h6>
-                     <div class="attention_text_list">На товары и услуги в нашем магазине</div>
-                  </div>
-               </div>
-               
             </div>
+            <div class="attention_item quality">
+               <div class="attention_content">
+                  <h6 class="attention_subtitle_list">Качество</h6>
+                  <div class="attention_text_list">Гарантия от производителя</div>
+               </div>
+            </div>
+            <div class="attention_item complex_approach">
+               <div class="attention_content">
+                  <h6 class="attention_subtitle_list">Комплексный подход</h6>
+                  <div class="attention_text_list">К обслуживанию кассы на предприятии</div>
+               </div>
+            </div>
+            <div class="attention_item low_price">
+               <div class="attention_content">
+                  <h6 class="attention_subtitle_list">гарантия низких цен</h6>
+                  <div class="attention_text_list">На товары и услуги в нашем магазине</div>
+               </div>
+            </div>
+
          </div>
+      </div>
+      <div class="wrapper">
+         <div class="popular_goods">
+            <h6 class="subtitle_shop">Популярные товары</h6>
+            <div class="cards">
+               <div class="card_item">
+                  <div class="card_item_img">
+                     <img src="./img/card_item1.svg" alt="#">
+                  </div>
+                  <div class="card_item_info">
+                     <div class="card_item_text">Код активации
+                        Яндекс ОФД</div>
+                     <div class="card_item_text_time"> 15 месяцев </div>
+                     <div class="price_amount">
+                        <div class="price">490р</div>
+                        <div class="amount">
+                           <div class="minus">-</div>
+                           <div class="number_purchases">1</div>
+                           <div class="plus">+</div>
+                        </div>
+                     </div>
+                     <button class="button_buy">Купить</button>
+                  </div>
+
+               </div>
+               <div class="card_item">
+                  <div class="card_item_img">
+                     <img src="./img/card_item2.svg" alt="#">
+                  </div>
+                  <div class="card_item_info">
+                     <div class="card_item_text">Код активации
+                        Такском ОФД</div>
+                     <div class="card_item_text_time"> 15 месяцев </div>
+                     <div class="price_amount">
+                        <div class="price">790р</div>
+                        <div class="amount">
+                           <div class="minus">-</div>
+                           <div class="number_purchases">1</div>
+                           <div class="plus">+</div>
+                        </div>
+                     </div>
+                     <button class="button_buy">Купить</button>
+                  </div>
+
+               </div>
+               <div class="card_item">
+                  <div class="card_item_img">
+                     <img src="./img/card_item3.svg" alt="#">
+                  </div>
+                  <div class="card_item_info">
+                     <div class="card_item_text">Код активации
+                        OFD.ru</div>
+                     <div class="card_item_text_time"> 15 месяцев </div>
+                     <div class="price_amount">
+                        <div class="price">490р</div>
+                        <div class="amount">
+                           <div class="minus">-</div>
+                           <div class="number_purchases">1</div>
+                           <div class="plus">+</div>
+                        </div>
+                     </div>
+                     <button class="button_buy">Купить</button>
+                  </div>
+
+               </div>
+               <div class="card_item">
+                  <div class="card_item_img">
+                     <img src="./img/card_item4.svg" alt="#">
+                  </div>
+                  <div class="card_item_info">
+                     <div class="card_item_text">Код активации
+                        Первый ОФД</div>
+                     <div class="card_item_text_time"> 15 месяцев </div>
+                     <div class="price_amount">
+                        <div class="price">490р</div>
+                        <div class="amount">
+                           <div class="minus">-</div>
+                           <div class="number_purchases">1</div>
+                           <div class="plus">+</div>
+                        </div>
+                     </div>
+                     <button class="button_buy">Купить</button>
+                  </div>
+
+               </div>
+               <div class="card_item">
+                  <div class="card_item_img">
+                     <img src="./img/card_item5.svg" alt="#">
+                  </div>
+                  <div class="card_item_info">
+                     <div class="card_item_text">Код активации
+                        Яндекс ОФД</div>
+                     <div class="card_item_text_time"> 36 месяцев </div>
+                     <div class="price_amount">
+                        <div class="price">990р</div>
+                        <div class="amount">
+                           <div class="minus">-</div>
+                           <div class="number_purchases">1</div>
+                           <div class="plus">+</div>
+                        </div>
+                     </div>
+                     <button class="button_buy">Купить</button>
+                  </div>
+
+               </div>
+               <div class="card_item ">
+                  <div class="card_item_img">
+                     <img src="./img/card_item6.svg" alt="#">
+                  </div>
+                  <div class="card_item_info">
+                     <div class="card_item_text">Код активации
+                        Платформа ОФД</div>
+                     <div class="card_item_text_time"> 15 месяцев </div>
+                     <div class="price_amount">
+                        <div class="price">790р</div>
+                        <div class="amount">
+                           <div class="minus">-</div>
+                           <div class="number_purchases">1</div>
+                           <div class="plus">+</div>
+                        </div>
+                     </div>
+                     <button class="button_buy">Купить</button>
+                  </div>
+
+               </div>
+               <div class="card_item ">
+                  <div class="card_item_img">
+                     <img src="./img/card_item7.svg" alt="#">
+                  </div>
+                  <div class="card_item_info">
+                     <div class="card_item_text">Код активации
+                        Сбис ОФД</div>
+                     <div class="card_item_text_time"> 15 месяцев </div>
+                     <div class="price_amount">
+                        <div class="price">990р</div>
+                        <div class="amount">
+                           <div class="minus">-</div>
+                           <div class="number_purchases">1</div>
+                           <div class="plus">+</div>
+                        </div>
+                     </div>
+                     <button class="button_buy">Купить</button>
+                  </div>
+
+               </div>
+               <div class="card_item">
+                  <div class="card_item_img">
+                     <img src="./img/card_item8.svg" alt="#">
+                  </div>
+                  <div class="card_item_info">
+                     <div class="card_item_text">Код активации
+                        Первый ОФД</div>
+                     <div class="card_item_text_time"> 36 месяцев </div>
+                     <div class="price_amount">
+                        <div class="price">1 590р</div>
+                        <div class="amount">
+                           <div class="minus">-</div>
+                           <div class="number_purchases">1</div>
+                           <div class="plus">+</div>
+                        </div>
+                     </div>
+                     <button class="button_buy">Купить</button>
+                  </div>
+
+               </div>
+            </div>
+            <div class="see_more">Показать все</div>
+         </div>
+      </div>
+      <div class="question">
+         <h2 class="subtitle_shop subtitle_question">Есть вопросы?</h2>
+         <div class="question_text">
+            Наши специалисты свяжутся с вами и найдут оптимальные для вас условия сотрудничества
+         </div>
+         <form class="question_form" action="#">
+            <input class="question_input" type="text" value="Имя">
+            <input class="question_input" type="tel" value="Телефон">
+            <button class="question_button">Заказать конcультацию</button>
+         </form>
+         <div class="question_text2">
+            Нажимая кнопку "Заказать консультацию" вы соглашаетесь
+            с политикой обработки персональнх данных
+         </div>
+      </div>
+
    </div>
 
 
 
 
-   <script src="js/main.min.js"></script>
+   <!-- <script src="js/main.min.js"></script> -->
    <script src="js/main.js"></script>
 </body>
 
