costumers swiper end

--- a/index.html
+++ b/index.html
@@ -385,14 +385,11 @@
                </div>
                ...
             </div>
-
-            <!-- If we need navigation buttons -->
-            <div class="swiper-button-prev"></div>
-            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"> <img src="./img/arrow_prev.svg" alt="#"></div>
+            <div class="swiper-button-next"> <img src="./img/arrow_next.svg" alt="#"></div>
          </div>
          <div class="add_review">Добавить отзыв</div>
       </div>
-      <!-- swiper -->
    </div>
 
 
