Block Order help must be adaptet

--- a/index.html
+++ b/index.html
@@ -383,12 +383,99 @@
                      </div>
                   </div>
                </div>
-               ...
             </div>
             <div class="swiper-button-prev"> <img src="./img/arrow_prev.svg" alt="#"></div>
             <div class="swiper-button-next"> <img src="./img/arrow_next.svg" alt="#"></div>
          </div>
          <div class="add_review">Добавить отзыв</div>
+      </div>
+      <div class="wrapper">
+         <div class="sev_info">
+            <h2 class="sev_info_subtittle">Sevkassa - интернет-магазин программного
+               обеспечения для бизнеса</h2>
+            <div class="sev_info_img_text">
+               <picture class="sev_info_img">
+                  <!-- <source media="(max-width: 768px)" src="./img/sev_ingo_img768.jpg" alt="2">
+                     <source media="(max-width: 320px)" src="./img/sev_ingo_img320.jpg" alt="3"> -->
+                  <img src="./img/sev_ingo_img.jpg" alt="1">
+               </picture>
+               <div class="sev_info_text">
+                  <div class="sev_text">Первая покупка фискального регистратора будет значительно ощутима, но, вместе с
+                     тем и необходимая. Ведь согласно законодательным нормам закона 54-ФЗ на тех, кто осуществляет
+                     деятельность без контрольно-кассовой техники будут возложены санкции и штрафы.</div>
+                  <div class="sev_text">Покупая ккт в нашей компании, вы значительно сэкономите денежные средства на
+                     приобретении качественного и нового кассового аппарата. Мы предлагаем квалифицированную помощь в
+                     подборе необходимого именно вам оборудования. Рекомендуем доверять лишь надежным партнерам в
+                     решении вопроса купить кассу для ип.</div>
+               </div>
+            </div>
+         </div>
+      </div>
+      <div class="shop_tools">
+         <div class="wrapper">
+            <h2 class="shop_tools_tittle">Чем еще мы можем быть вам полезны?</h2>
+            <div class="shop_tools_list">
+               <div class="shop_tools_item">
+                  <figure class="shop_tool_items">
+                     <div class="shop_tool_item"><img src="./img/shop_tool_item1.svg" alt="registration"></div>
+                     <figcaption class="shop_tool_description">Регистрируем в ФНС</figcaption>
+                  </figure>
+                     <button class="shop_tool_order">Заказать</button>
+               </div>
+               <div class="shop_tools_item">
+                  <figure class="shop_tool_items">
+                     <div class="shop_tool_item"><img src="./img/shop_tool_item2.svg" alt="registration"></div>
+                     <figcaption class="shop_tool_description">Оформляем
+                        электронную подпись</figcaption>
+                  </figure>
+                     <button class="shop_tool_order">Заказать</button>
+               </div>
+               <div class="shop_tools_item">
+                  <figure class="shop_tool_items">
+                     <div class="shop_tool_item"><img src="./img/shop_tool_item3.svg" alt="registration"></div>
+                     <figcaption class="shop_tool_description">Подключаем к ОФД</figcaption>
+                  </figure>
+                     <button class="shop_tool_order">Заказать</button>
+               </div>
+               <div class="shop_tools_item">
+                  <figure class="shop_tool_items">
+                     <div class="shop_tool_item"><img src="./img/shop_tool_item4.svg" alt="registration"></div>
+                     <figcaption class="shop_tool_description">Предоставляем техническое 
+                        сопровождение оборудования</figcaption>
+                  </figure>
+                     <button class="shop_tool_order">Заказать</button>
+               </div>
+               <div class="shop_tools_item">
+                  <figure class="shop_tool_items">
+                     <div class="shop_tool_item"><img src="./img/shop_tool_item5.svg" alt="registration"></div>
+                     <figcaption class="shop_tool_description">Снимаем кассы с учета</figcaption>
+                  </figure>
+                     <button class="shop_tool_order">Заказать</button>
+               </div>
+               <div class="shop_tools_item">
+                  <figure class="shop_tool_items">
+                     <div class="shop_tool_item"><img src="./img/shop_tool_item7.svg" alt="registration"></div>
+                     <figcaption class="shop_tool_description">Обучаем в работе с ККТ</figcaption>
+                  </figure>
+                     <button class="shop_tool_order">Заказать</button>
+               </div>
+               <div class="shop_tools_item">
+                  <figure class="shop_tool_items">
+                     <div class="shop_tool_item"><img src="./img/shop_tool_item8.svg" alt="registration"></div>
+                     <figcaption class="shop_tool_description">Производим замену
+                        фискального накопителя</figcaption>
+                  </figure>
+                     <button class="shop_tool_order">Заказать</button>
+               </div>
+               <div class="shop_tools_item">
+                  <figure class="shop_tool_items">
+                     <div class="shop_tool_item"><img src="./img/shop_tool_item1.svg" alt="registration"></div>
+                     <figcaption class="shop_tool_description">Регистрируем в ФНС</figcaption>
+                  </figure>
+                     <button class="shop_tool_order">Заказать</button>
+               </div>
+            </div>
+         </div>
       </div>
    </div>
 
